# optimal-fuel-map

./: .gitignore  LICENSE  README.md  pyproject.toml
fuel_api/: db.sqlite3  geocoded-fuel-stations.csv
fuel_api/fuel/: models.py  views.py
fuel_api/fuel/management/commands/: load_fuel_prices.py
fuel_api/fuel_api/: settings.py  urls.py
