[tool.poetry]
name = "optimal-fuel-map"
version = "0.0.1"
description = ""
authors = ["satoshi <nathanuchia@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12"
Django = "3.2.23"
whitenoise = "^6.9.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
django-cors-headers = "^4.3.1"
polyline = "^2.0.2"
geopy = "^2.4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = {version = "^22.10.0", allow-prereleases = true}
mypy = "^0.991"
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

